maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:6: error: '(' expected but identifier found.
    if estFaceMur(){setDirection(dirM)
       ^